# pp_tracer

./: .coderabbit.yaml  .env.template  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  README.md  TARGET.md  pyproject.toml
.claude/hooks/: block-dangerous-git.sh
.claude/skills/lp-dev/: SKILL.md
.claude/skills/lp-dp/: SKILL.md
.claude/skills/lp-mr/: SKILL.md
.claude/skills/lp-ms/: SKILL.md
.claude/skills/lp-up/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml
.github/workflows/: test.yml
ppt/: __init__.py  __main__.py  cli.py  config.py  constants.py  display.py  holdings.py  prices.py  rebalance.py  returns.py  storage.py  valuation.py
ppt/services/: health.py  portfolio.py
pptracer/: __main__.py  cli.py  config.py
scripts/: cleanup-merged-branches.sh  commit-msg  lp-mr-cleanup.sh  watch-pr.sh
tests/: test_cli.py  test_config.py  test_constants.py  test_display.py  test_holdings.py  test_prices.py  test_rebalance.py  test_returns.py  test_storage.py  test_valuation.py
