[project]
name = "pp-tracer"
version = "0.1.0"
description = "Point-to-Point Tracer — latency tracing and network path analysis toolkit"
requires-python = ">=3.11"
dependencies = [
    # 核心数值与数据处理
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14",

    # 网络与数据采集
    "requests>=2.31",
    "httpx>=0.26",

    # 调度与存储
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "alembic>=1.13",

    # 系统支持
    "tenacity>=8.2",
    "psutil>=5.9",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.scripts]
pptracer = "pptracer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.2",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pptracer*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
