[project]
name = "ppt"
version = "0.1.0"
description = "永久投资组合辅助工具 — 主动优化的计划器 + 记账本"
requires-python = ">=3.8"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.3.3",
    "numpy>=1.24",
    "rich>=13.0",
    "click>=8.1",
]

[project.scripts]
ppt = "ppt.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ppt*"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"ppt/valuation.py" = ["N806", "N803"]
"tests/test_valuation.py" = ["N806"]
"ppt/rebalance.py" = ["N806", "N803"]
"tests/test_rebalance.py" = ["N806", "N803"]
"ppt/returns.py" = ["N806", "N803"]
"tests/test_returns.py" = ["N806", "N803"]
"ppt/display.py" = ["N806", "N803"]
"ppt/cli.py" = ["N806", "N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
