[project]
name = "ppt"
version = "0.2.0"
description = "永久投资组合 OSS 账本与三级优先均衡计划器"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "rich>=13.0",
    "click>=8.1",
]

[project.scripts]
ppt = "ppt.cli:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ppt*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
